--- a/docs/image/mj/index.mdx
+++ b/docs/image/mj/index.mdx
@@ -39,3 +39,19 @@ title: MJ
 
 ## Examples
 
+<CodeGroup title="MJ example">
+  ```typescript
+  import axios from "axios";
+  (async () => {
+    let response = await axios({
+      method: "post",
+      url: 'https://api.turing.sh/image/mj',
+      headers: {
+        "Content-Type": "application/json",
+        Authorization: "Bearer YOUR_API_KEY",
+      },
+      data: [object Object],
+    })
+  })();
+  ```
+</CodeGroup>
