--- a/docs/text/filter/index.mdx
+++ b/docs/text/filter/index.mdx
@@ -18,3 +18,19 @@ title: Text Filter
 
 ## Examples
 
+<CodeGroup title="Text Filter example">
+  ```typescript
+  import axios from "axios";
+  (async () => {
+    let response = await axios({
+      method: "post",
+      url: 'https://api.turing.sh/text/filter',
+      headers: {
+        "Content-Type": "application/json",
+        Authorization: "Bearer YOUR_API_KEY",
+      },
+      data: [object Object],
+    })
+  })();
+  ```
+</CodeGroup>
