--- a/docs/text/huggingface/index.mdx
+++ b/docs/text/huggingface/index.mdx
@@ -30,3 +30,19 @@ title: Huggingface based models
 
 ## Examples
 
+<CodeGroup title="Huggingface based models example">
+  ```typescript
+  import axios from "axios";
+  (async () => {
+    let response = await axios({
+      method: "post",
+      url: 'https://api.turing.sh/text/huggingface',
+      headers: {
+        "Content-Type": "application/json",
+        Authorization: "Bearer YOUR_API_KEY",
+      },
+      data: [object Object],
+    })
+  })();
+  ```
+</CodeGroup>
