--- a/docs/audio/music/index.mdx
+++ b/docs/audio/music/index.mdx
@@ -24,3 +24,19 @@ title: Music generation
 
 ## Examples
 
+<CodeGroup title="Music generation example">
+  ```typescript
+  import axios from "axios";
+  (async () => {
+    let response = await axios({
+      method: "post",
+      url: 'https://api.turing.sh/audio/music',
+      headers: {
+        "Content-Type": "application/json",
+        Authorization: "Bearer YOUR_API_KEY",
+      },
+      data: [object Object],
+    })
+  })();
+  ```
+</CodeGroup>
