--- a/docs/audio/stt/index.mdx
+++ b/docs/audio/stt/index.mdx
@@ -29,3 +29,19 @@ title: Speech to text
 
 ## Examples
 
+<CodeGroup title="Speech to text example">
+  ```typescript
+  import axios from "axios";
+  (async () => {
+    let response = await axios({
+      method: "post",
+      url: 'https://api.turing.sh/audio/stt',
+      headers: {
+        "Content-Type": "application/json",
+        Authorization: "Bearer YOUR_API_KEY",
+      },
+      data: [object Object],
+    })
+  })();
+  ```
+</CodeGroup>
