--- a/docs/audio/tts/index.mdx
+++ b/docs/audio/tts/index.mdx
@@ -32,3 +32,19 @@ title: Text to speech
 
 ## Examples
 
+<CodeGroup title="Text to speech example">
+  ```typescript
+  import axios from "axios";
+  (async () => {
+    let response = await axios({
+      method: "post",
+      url: 'https://api.turing.sh/audio/tts',
+      headers: {
+        "Content-Type": "application/json",
+        Authorization: "Bearer YOUR_API_KEY",
+      },
+      data: [object Object],
+    })
+  })();
+  ```
+</CodeGroup>
