--- a/docs/image/sh/index.mdx
+++ b/docs/image/sh/index.mdx
@@ -73,3 +73,19 @@ title: Stablehorde
 
 ## Examples
 
+<CodeGroup title="Stablehorde example">
+  ```typescript
+  import axios from "axios";
+  (async () => {
+    let response = await axios({
+      method: "post",
+      url: 'https://api.turing.sh/image/sh',
+      headers: {
+        "Content-Type": "application/json",
+        Authorization: "Bearer YOUR_API_KEY",
+      },
+      data: [object Object],
+    })
+  })();
+  ```
+</CodeGroup>
