--- a/docs/text/alan/index.mdx
+++ b/docs/text/alan/index.mdx
@@ -59,3 +59,19 @@ title: Alan
 
 ## Examples
 
+<CodeGroup title="Alan example">
+  ```typescript
+  import axios from "axios";
+  (async () => {
+    let response = await axios({
+      method: "post",
+      url: 'https://api.turing.sh/text/alan',
+      headers: {
+        "Content-Type": "application/json",
+        Authorization: "Bearer YOUR_API_KEY",
+      },
+      data: [object Object],
+    })
+  })();
+  ```
+</CodeGroup>
