--- a/docs/text/translate/index.mdx
+++ b/docs/text/translate/index.mdx
@@ -28,3 +28,19 @@ title: Translate text
 
 ## Examples
 
+<CodeGroup title="Translate text example">
+  ```typescript
+  import axios from "axios";
+  (async () => {
+    let response = await axios({
+      method: "post",
+      url: 'https://api.turing.sh/text/translate',
+      headers: {
+        "Content-Type": "application/json",
+        Authorization: "Bearer YOUR_API_KEY",
+      },
+      data: [object Object],
+    })
+  })();
+  ```
+</CodeGroup>
