--- a/docs/image/mj/index.mdx
+++ b/docs/image/mj/index.mdx
@@ -50,7 +50,14 @@ title: MJ
         "Content-Type": "application/json",
         Authorization: "Bearer YOUR_API_KEY",
       },
-      data: [object Object],
+      data: {
+  "prompt": "string",
+  "model": "5.2",
+  "action": "imagine",
+  "number": 0,
+  "id": "string",
+  "stream": true
+},
     })
   })();
   ```
