--- a/docs/text/alan/index.mdx
+++ b/docs/text/alan/index.mdx
@@ -70,7 +70,19 @@ title: Alan
         "Content-Type": "application/json",
         Authorization: "Bearer YOUR_API_KEY",
       },
-      data: [object Object],
+      data: {
+  "userName": "string",
+  "conversationId": "string",
+  "message": "string",
+  "searchEngine": "google",
+  "photo": "string",
+  "photoDescription": "string",
+  "imageGenerator": "sdxl",
+  "videoGenerator": "string",
+  "audioGenerator": "string",
+  "imageModificator": "string",
+  "max_tokens": 1
+},
     })
   })();
   ```
