--- a/docs/text/filter/index.mdx
+++ b/docs/text/filter/index.mdx
@@ -29,7 +29,10 @@ title: Text Filter
         "Content-Type": "application/json",
         Authorization: "Bearer YOUR_API_KEY",
       },
-      data: [object Object],
+      data: {
+  "text": "string",
+  "filters": "nsfw"
+},
     })
   })();
   ```
