--- a/docs/audio/music/index.mdx
+++ b/docs/audio/music/index.mdx
@@ -35,7 +35,11 @@ title: Music generation
         "Content-Type": "application/json",
         Authorization: "Bearer YOUR_API_KEY",
       },
-      data: [object Object],
+      data: {
+  "prompt": "string",
+  "model": "small",
+  "duration": 8
+},
     })
   })();
   ```
