--- a/docs/text/huggingface/index.mdx
+++ b/docs/text/huggingface/index.mdx
@@ -41,7 +41,11 @@ title: Huggingface based models
         "Content-Type": "application/json",
         Authorization: "Bearer YOUR_API_KEY",
       },
-      data: [object Object],
+      data: {
+  "prompt": "string",
+  "model": "OpenAssistant/oasst-sft-4-pythia-12b-epoch-3.5",
+  "stop": "string"
+},
     })
   })();
   ```
