--- a/docs/text/google/index.mdx
+++ b/docs/text/google/index.mdx
@@ -13,7 +13,7 @@ title: Google Models
 
 - **model**
   - Type: string
-  - Required: true
+  - Required: false
   - Options: chat-bison
   - Default: chat-bison
 
