--- a/docs/audio/tts/index.mdx
+++ b/docs/audio/tts/index.mdx
@@ -52,4 +52,21 @@ title: Text to speech
     })
   })();
   ```
+  ```python
+  import requests
+  import json
+  response = requests.post(
+    "https://api.turing.sh/audio/tts",
+    headers={
+      "Content-Type": "application/json",
+      "Authorization": "Bearer YOUR_API_KEY",
+    },
+    data=json.dumps({
+  "model": "google",
+  "voice": "string",
+  "text": "string",
+  "language": "en"
+}),
+  )
+  ```
 </CodeGroup>
