--- a/docs/text/filter/index.mdx
+++ b/docs/text/filter/index.mdx
@@ -36,4 +36,19 @@ title: Text Filter
     })
   })();
   ```
+  ```python
+  import requests
+  import json
+  response = requests.post(
+    "https://api.turing.sh/text/filter",
+    headers={
+      "Content-Type": "application/json",
+      "Authorization": "Bearer YOUR_API_KEY",
+    },
+    data=json.dumps({
+  "text": "string",
+  "filters": "nsfw"
+}),
+  )
+  ```
 </CodeGroup>
