--- a/docs/image/mj/index.mdx
+++ b/docs/image/mj/index.mdx
@@ -51,14 +51,29 @@ title: MJ
         Authorization: "Bearer YOUR_API_KEY",
       },
       data: {
-  "prompt": "string",
   "model": "5.2",
   "action": "imagine",
   "number": 0,
-  "id": "string",
   "stream": true
 },
     })
   })();
+  ```
+  ```python
+  import requests
+  import json
+  response = requests.post(
+    "https://api.turing.sh/image/mj",
+    headers={
+      "Content-Type": "application/json",
+      "Authorization": "Bearer YOUR_API_KEY",
+    },
+    data=json.dumps({
+  "model": "5.2",
+  "action": "imagine",
+  "number": 0,
+  "stream": true
+}),
+  )
   ```
 </CodeGroup>
