--- a/docs/image/sh/index.mdx
+++ b/docs/image/sh/index.mdx
@@ -86,20 +86,36 @@ title: Stablehorde
       },
       data: {
   "prompt": "string",
-  "negative_prompt": "string",
-  "image": "string",
   "width": 512,
   "height": 512,
   "steps": 50,
   "number": 1,
-  "strength": 1,
   "sampler": "k_lms",
-  "cfg_scale": 1,
-  "seed": 1,
   "model": "stable_diffusion",
   "stream": true
 },
     })
   })();
+  ```
+  ```python
+  import requests
+  import json
+  response = requests.post(
+    "https://api.turing.sh/image/sh",
+    headers={
+      "Content-Type": "application/json",
+      "Authorization": "Bearer YOUR_API_KEY",
+    },
+    data=json.dumps({
+  "prompt": "string",
+  "width": 512,
+  "height": 512,
+  "steps": 50,
+  "number": 1,
+  "sampler": "k_lms",
+  "model": "stable_diffusion",
+  "stream": true
+}),
+  )
   ```
 </CodeGroup>
