--- a/docs/text/alan/index.mdx
+++ b/docs/text/alan/index.mdx
@@ -75,15 +75,27 @@ title: Alan
   "conversationId": "string",
   "message": "string",
   "searchEngine": "google",
-  "photo": "string",
-  "photoDescription": "string",
-  "imageGenerator": "sdxl",
-  "videoGenerator": "string",
-  "audioGenerator": "string",
-  "imageModificator": "string",
-  "max_tokens": 1
+  "imageGenerator": "sdxl"
 },
     })
   })();
+  ```
+  ```python
+  import requests
+  import json
+  response = requests.post(
+    "https://api.turing.sh/text/alan",
+    headers={
+      "Content-Type": "application/json",
+      "Authorization": "Bearer YOUR_API_KEY",
+    },
+    data=json.dumps({
+  "userName": "string",
+  "conversationId": "string",
+  "message": "string",
+  "searchEngine": "google",
+  "imageGenerator": "sdxl"
+}),
+  )
   ```
 </CodeGroup>
