feat: stream image gen & claude endpoint

--- a/docs/image/kandinsky/index.mdx
+++ b/docs/image/kandinsky/index.mdx
@@ -45,6 +45,10 @@ title: Kandinsky 2.1
   - Required: false
   - Default: 4
 
+- **stream**
+  - Type: boolean
+  - Required: false
+
 ## Examples
 
 <CodeGroup title="Kandinsky 2.1 example">
