--- a/docs/image/sdxl/index.mdx
+++ b/docs/image/sdxl/index.mdx
@@ -74,6 +74,10 @@ title: Stable Diffusion XL
   - Type: number
   - Required: false
 
+- **stream**
+  - Type: boolean
+  - Required: false
+
 ## Examples
 
 <CodeGroup title="Stable Diffusion XL example">
