--- a/docs/image/kandinsky/index.mdx
+++ b/docs/image/kandinsky/index.mdx
@@ -49,6 +49,7 @@ title: Kandinsky 2.1
 - **stream**
   - Type: boolean
   - Required: false
+  - Default: true
 
 ## Examples
 
@@ -70,7 +71,8 @@ title: Kandinsky 2.1
   "guidance_scale": 4,
   "width": 512,
   "height": 512,
-  "cfg_scale": 4
+  "cfg_scale": 4,
+  "stream": true
 },
     })
   })();
@@ -91,7 +93,8 @@ title: Kandinsky 2.1
   "guidance_scale": 4,
   "width": 512,
   "height": 512,
-  "cfg_scale": 4
+  "cfg_scale": 4,
+  "stream": true
 }),
   )
   ```
