--- a/docs/image/sdxl/index.mdx
+++ b/docs/image/sdxl/index.mdx
@@ -77,6 +77,7 @@ title: Stable Diffusion XL
 - **stream**
   - Type: boolean
   - Required: false
+  - Default: true
 
 ## Examples
 
@@ -101,7 +102,8 @@ title: Stable Diffusion XL
   "sampler": "DDIM",
   "cfg_scale": 7,
   "style": "3d-model",
-  "model": "sdxl"
+  "model": "sdxl",
+  "stream": true
 },
     })
   })();
@@ -125,7 +127,8 @@ title: Stable Diffusion XL
   "sampler": "DDIM",
   "cfg_scale": 7,
   "style": "3d-model",
-  "model": "sdxl"
+  "model": "sdxl",
+  "stream": true
 }),
   )
   ```
