feat: stablehorde && musicgen

--- a/docs/audio/music/index.mdx
+++ b/docs/audio/music/index.mdx
@@ -22,6 +22,10 @@ title: Music generation
   - Required: false
   - Default: 8
 
+- **stream**
+  - Type: boolean
+  - Required: false
+
 ## Examples
 
 <CodeGroup title="Music generation example">
