--- a/docs/image/sdxl/index.mdx
+++ b/docs/image/sdxl/index.mdx
@@ -3,7 +3,7 @@ title: Stable Diffusion XL
 ---
 
 # Stable Diffusion XL
-
+POST *https://api.turing.sh/image/sdxl*
 ## Parameters
 
 
@@ -62,6 +62,7 @@ title: Stable Diffusion XL
 - **style**
   - Type: string
   - Required: false
+  - Description: Style to use for generating the image
   - Options: 3d-model, analog-film, anime, cinematic, comic-book, digital-art, enhance, fantasy-art, isometric, line-art, low-poly, modeling-compound, neon-punk, origami, photographic, pixel-art, title-texture
 
 - **model**
