--- a/docs/text/other/index.mdx
+++ b/docs/text/other/index.mdx
@@ -3,6 +3,8 @@ title: Other models
 ---
 
 # Other models
+POST *https://api.turing.sh/text/other*
+<Warning>This model is not yet implemented</Warning>
 
 ## Parameters
 
