--- a/docs/image/dall-e/index.mdx
+++ b/docs/image/dall-e/index.mdx
@@ -3,7 +3,7 @@ title: Dall-e 2
 ---
 
 # Dall-e 2
-
+POST *https://api.turing.sh/image/dall-e*
 ## Parameters
 
 
@@ -11,7 +11,7 @@ title: Dall-e 2
   - Type: string
   - Required: false
 
-- **samples**
+- **number**
   - Type: number
   - Required: true
   - Options: 1, 2, 3, 4
@@ -25,6 +25,7 @@ title: Dall-e 2
 - **image**
   - Type: string
   - Required: false
+  - Description: Image you want to vary
 
 ## Examples
 
@@ -40,7 +41,7 @@ title: Dall-e 2
         Authorization: "Bearer YOUR_API_KEY",
       },
       data: {
-  "samples": 1,
+  "number": 1,
   "size": "512x512"
 },
     })
@@ -56,7 +57,7 @@ title: Dall-e 2
       "Authorization": "Bearer YOUR_API_KEY",
     },
     data=json.dumps({
-  "samples": 1,
+  "number": 1,
   "size": "512x512"
 }),
   )
