--- a/docs/image/kandinsky/index.mdx
+++ b/docs/image/kandinsky/index.mdx
@@ -3,13 +3,14 @@ title: Kandinsky 2.1
 ---
 
 # Kandinsky 2.1
-
+POST *https://api.turing.sh/image/kandinsky*
 ## Parameters
 
 
 - **prompt**
   - Type: string
-  - Required: false
+  - Required: true
+  - Description: Prompt to generate the image
 
 - **steps**
   - Type: number
@@ -65,6 +66,7 @@ title: Kandinsky 2.1
         Authorization: "Bearer YOUR_API_KEY",
       },
       data: {
+  "prompt": "string",
   "steps": 100,
   "number": 1,
   "negative_prompt": "disfigured mouth, disfigured teeth, half head, half face, blury, side looking, old, wrinkle, child, no face, pencil, full body, sharp, far away, overlapping, duplication, nude, disfigured, kitsch, oversaturated, grain, low-res, Deformed, blurry, bad anatomy, poorly drawn face, mutation, mutated, extra limb, ugly, poorly drawn hands, missing limb, blurry, floating limbs, disconnected limbs, malformed hands, blur, out of focus, long body, disgusting, poorly drawn, childish, mutilated, mangled, surreal, out of frame, duplicate, 2 faces",
@@ -87,6 +89,7 @@ title: Kandinsky 2.1
       "Authorization": "Bearer YOUR_API_KEY",
     },
     data=json.dumps({
+  "prompt": "string",
   "steps": 100,
   "number": 1,
   "negative_prompt": "disfigured mouth, disfigured teeth, half head, half face, blury, side looking, old, wrinkle, child, no face, pencil, full body, sharp, far away, overlapping, duplication, nude, disfigured, kitsch, oversaturated, grain, low-res, Deformed, blurry, bad anatomy, poorly drawn face, mutation, mutated, extra limb, ugly, poorly drawn hands, missing limb, blurry, floating limbs, disconnected limbs, malformed hands, blur, out of focus, long body, disgusting, poorly drawn, childish, mutilated, mangled, surreal, out of frame, duplicate, 2 faces",
