--- a/docs/text/alan/index.mdx
+++ b/docs/text/alan/index.mdx
@@ -3,6 +3,8 @@ title: Alan
 ---
 
 # Alan
+POST *https://api.turing.sh/text/alan*
+<Warning>This model is unfinished and is not working yet.</Warning>
 
 ## Parameters
 
