feat: use stream on all models and switch to rest on model router

--- a/docs/audio/stt/index.mdx
+++ b/docs/audio/stt/index.mdx
@@ -30,6 +30,10 @@ POST *https://api.turing.sh/audio/stt*
   - Options: tiny, base, small, medium, large-v1, large-v2
   - Default: base
 
+- **stream**
+  - Type: boolean
+  - Required: false
+
 ## Examples
 
 <CodeGroup title="Speech to text example">
