--- a/docs/audio/tts/index.mdx
+++ b/docs/audio/tts/index.mdx
@@ -35,6 +35,10 @@ POST *https://api.turing.sh/audio/tts*
   - Required: false
   - Description: Speak slowly (google only)
 
+- **stream**
+  - Type: boolean
+  - Required: false
+
 ## Examples
 
 <CodeGroup title="Text to speech example">
