--- a/docs/image/controlnet/index.mdx
+++ b/docs/image/controlnet/index.mdx
@@ -21,6 +21,10 @@ POST *https://api.turing.sh/image/controlnet*
   - Type: string
   - Required: true
 
+- **stream**
+  - Type: boolean
+  - Required: false
+
 ## Examples
 
 <CodeGroup title="Controlnet example">
