--- a/docs/image/dall-e/index.mdx
+++ b/docs/image/dall-e/index.mdx
@@ -27,6 +27,10 @@ POST *https://api.turing.sh/image/dall-e*
   - Required: false
   - Description: Image you want to vary
 
+- **stream**
+  - Type: boolean
+  - Required: false
+
 ## Examples
 
 <CodeGroup title="Dall-e 2 example">
